--- a/build.gradle
+++ b/build.gradle
@@ -139,6 +139,7 @@ project(":core") {
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
+        compile files("src/libs/kryonet-2.21-all.jar")
     }
 }
 
