--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0
-app.id=com.locus.game
-app.mainclass=com.locus.game.IOSLauncher
+app.id=com.locus.main
+app.mainclass=com.locus.main.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
 app.name=Project Locus
